test_scores/negative_dimers/features/P50570.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P50570.pkl.xz